fix & improv(PhotosPage & WindowAnimation): banner bug & cleaned up cleaned up WindowAnimation code, so it's clearer and futurproof. (provides a div with position: relative to allow absolute banner by example) Fixed banner that was stuck on top of the screen during window animation on mobile

--- a/src/PhotosPage/PhotosPage.css
+++ b/src/PhotosPage/PhotosPage.css
@@ -1,12 +1,3 @@
-.photosAppBackground {
-  background: rgb(211, 239, 255);
-  background: -moz-radial-gradient(circle at bottom left, rgba(211, 239, 255, 1) 0%, rgba(255, 255, 255, 1) 100%);
-  background: -webkit-radial-gradient(circle at bottom left, rgba(211, 239, 255, 1) 0%, rgba(255, 255, 255, 1) 100%);
-  background: radial-gradient(circle at bottom left, rgba(211, 239, 255, 1) 0%, rgba(255, 255, 255, 1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#d3efff", endColorstr="#ffffff", GradientType=1);
-  display: flex;
-}
-
 .leftPannel {
   padding-top: 65px;
   width: 450px;
